
@startuml Omniverse Class Diagram

title Omniverse - Class Diagram

class Category {
    description
    array items
}

object Electronics {

}

object Mens {
  
}

object Womens {

}

object Jewelery {

}

class Item {
  image
  Float price 
  description
}

object Cart {
  Array items
  AddToCart()
    Checkout()
}


 
Cart "0..*" -- "many" Item
Item "many" -- "1" Category

Category <|-- Electronics
Category <|-- Mens
Category <|-- Womens
Category <|-- Jewelery




@enduml
